Added setup with Kubernetes

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,13 +16,14 @@ services:
       - MARIADB_DATABASE=mariadb
       - MARIADB_USER=mariadb
       - MARIADB_PASSWORD=mariadb
+    # see: https://galeracluster.com/library/documentation/firewall-settings.html
     ports:
       - "3306"
       - "4444"
       - "4567"
       - "4568"
     volumes:
-      - ./scripts:/scripts
+      - ./start.sh:/scripts/start.sh
   mariadb-1:
     container_name: mariadb-1
     image: mariadb:10.7.4
@@ -44,4 +45,4 @@ services:
       - "4567"
       - "4568"
     volumes:
-      - ./scripts:/scripts
+      - ./start.sh:/scripts/start.sh
