--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -33,17 +33,22 @@ data:
     binlog_format=row
     innodb_autoinc_lock_mode=2
 
-    # Galera cluster configuration
+    # Cluster configuration: https://galeracluster.com/library/documentation/mysql-wsrep-options.html
     wsrep_new_cluster="$WSREP_NEW_CLUSTER"
     wsrep_on=ON
     wsrep_provider=/usr/lib/galera/libgalera_smm.so
     wsrep_cluster_address="gcomm://mariadb-0.mariadb-headless.default.svc.cluster.local,mariadb-1.mariadb-headless.default.svc.cluster.local,mariadb-2.mariadb-headless.default.svc.cluster.local"
     wsrep_cluster_name="mariadb-galera-cluster"
-    wsrep_sst_method=rsync
 
-    # Cluster node configuration
+    # Node configuration
     wsrep_node_address="$HOSTNAME.mariadb-headless.default.svc.cluster.local"
     wsrep_node_name="$HOSTNAME"
+
+    # SST: https://mariadb.com/kb/en/introduction-to-state-snapshot-transfers-ssts/ 
+    wsrep-sst-donor="mariadb-0,mariadb-1,mariadb-2,"
+    wsrep_sst_method="mariabackup"
+    wsrep_sst_auth="root:mariadb"
+    # wsrep_sst_method="rsync"
     EOF
 
     # Bootstrap failed container
