Moved startup script to a secret

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command:
       - bash
       - -c
-      - /scripts/start.sh
+      - /scripts/run.sh
     restart: unless-stopped
     environment:
       - HOSTNAME=mariadb-0
