--- a/kubernetes/statefulset.yaml
+++ b/kubernetes/statefulset.yaml
@@ -34,20 +34,34 @@ spec:
               value: mariadb
             - name: MARIADB_PASSWORD
               value: mariadb
-          image: mariadb:10.8.3
+          image: mariadb:10.6.8
           imagePullPolicy: IfNotPresent
           command:
             - bash
             - -c
             - /scripts/run.sh
-          # livenessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 10
-          #   periodSeconds: 5
+          livenessProbe:
+            exec:
+              command:
+                - bash
+                - -c
+                - mysql -u root -${MARIADB_ROOT_PASSWORD} -e "SHOW STATUS WHERE variable_name = 'wsrep_ready';"
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 1
+            successThreshold: 1
+            failureThreshold: 3
+          # readinessProbe:
+          #   exec:
+          #     command:
+          #       - bash
+          #       - -c
+          #       - mysql -u root -${MARIADB_ROOT_PASSWORD} -e "SHOW STATUS WHERE variable_name = 'wsrep_ready';"
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 10
+          #   timeoutSeconds: 1
           #   successThreshold: 1
-          #   tcpSocket:
-          #     port: 3306
-          #   timeoutSeconds: 5
+          #   failureThreshold: 3
           name: mariadb
           ports:
             - containerPort: 3306
@@ -58,14 +72,6 @@ spec:
               protocol: TCP
             - containerPort: 4568
               protocol: TCP
-          # readinessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 10
-          #   periodSeconds: 5
-          #   successThreshold: 1
-          #   tcpSocket:
-          #     port: 3306
-          #   timeoutSeconds: 5
           resources:
             limits:
               cpu: 300m
