--- a/kubernetes/statefulset.yaml
+++ b/kubernetes/statefulset.yaml
@@ -22,6 +22,7 @@ spec:
         app.kubernetes.io/name: mariadb
       name: mariadb
     spec:
+      serviceAccountName: mariadb
       containers:
         - env:
             - name: MYSQL_TCP_PORT
@@ -34,6 +35,12 @@ spec:
               value: mariadb
             - name: MARIADB_PASSWORD
               value: mariadb
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: CLUSTER
+              value: cluster.local
           image: mariadb:10.6.8
           imagePullPolicy: IfNotPresent
           command:
