--- a/kubernetes/statefulset.yaml
+++ b/kubernetes/statefulset.yaml
@@ -62,8 +62,8 @@ spec:
             exec:
               command:
                 - bash
-                - -c
-                - mysql -u root -p${MARIADB_ROOT_PASSWORD} -e "SHOW STATUS WHERE variable_name = 'wsrep_ready';"
+                - -ec
+                - mysql -u root -p${MARIADB_ROOT_PASSWORD} -e "SELECT 1;"
             initialDelaySeconds: 60
             periodSeconds: 10
             timeoutSeconds: 1
