--- a/kubernetes/statefulset.yaml
+++ b/kubernetes/statefulset.yaml
@@ -41,7 +41,7 @@ spec:
             - name: CLUSTER
               value: cluster.local
           volumeMounts:
-            - mountPath: /etc/mysql
+            - mountPath: /etc/mysql/mariadb.conf.d
               name: config
             - mountPath: /var/lib/mysql
               name: storage
@@ -101,7 +101,7 @@ spec:
               cpu: 100m
               memory: 128Mi
           volumeMounts:
-            - mountPath: /etc/mysql
+            - mountPath: /etc/mysql/mariadb.conf.d
               name: config
             - mountPath: /var/lib/mysql
               name: storage
