Renamed config file section

--- a/galera/kubernetes/1-bootstrap.cnf
+++ b/galera/kubernetes/1-bootstrap.cnf
@@ -1,4 +1,4 @@
-[mysqld]
+[galera]
 wsrep_new_cluster="ON"
 # wsrep_cluster_address="gcomm://" # old way, but it can be set via sql
 # Remove after bootstrap
