Added users and config

--- a/maxscale/Makefile
+++ b/maxscale/Makefile
@@ -27,6 +27,21 @@ client-user: cluster-ctx ## Configure client user.
 	$(KUBECTL) apply -f ./manifests/client_user.yaml
 	$(KUBECTL) apply -f ./manifests/client_grant.yaml
 
+.PHONY: monitor-user
+monitor-user: cluster-ctx ## Configure monitor user.
+	$(KUBECTL) apply -f ./manifests/monitor_user.yaml
+	$(KUBECTL) apply -f ./manifests/monitor_grant.yaml
+
+.PHONY: users
+users: maxscale-user client-user monitor-user ## Configure users
+
+.PHONY: maxscale-config
+maxscale-config: cluster-ctx ## Create MaxScale configuration.
+	$(KUBECTL) create secret generic config \
+		--from-file=config/0-maxscale.cnf \
+		--from-file=config/1-servers.cnf \
+		--dry-run=client -o yaml | $(KUBECTL) apply -f -
+
 include ../make/base.mk
 include ../make/deploy.mk
 include ../make/deps.mk
