--- a/maxscale/manifests/monitor_grant.yaml
+++ b/maxscale/manifests/monitor_grant.yaml
@@ -9,6 +9,7 @@ spec:
     - "REPLICATION CLIENT"
     - "SUPER"
     - "RELOAD"
+    - "SLAVE MONITOR"
   database: "*"
   table: "*"
   username: monitor
