--- a/maxscale/manifests/rw-split/maxscale-rw-split_deployment.yaml
+++ b/maxscale/manifests/rw-split/maxscale-rw-split_deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: maxscale-conn
+  name: maxscale-rw-split
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: maxscale-conn
-      app.kubernetes.io/name: maxscale-conn
+      app.kubernetes.io/instance: maxscale-rw-split
+      app.kubernetes.io/name: maxscale-rw-split
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: maxscale-conn
-        app.kubernetes.io/name: maxscale-conn
+        app.kubernetes.io/instance: maxscale-rw-split
+        app.kubernetes.io/name: maxscale-rw-split
     spec:
       containers:
         - name: maxscale
@@ -20,7 +20,7 @@ spec:
             - maxscale
           args:
             - --config
-            - /etc/config/conn.cnf
+            - /etc/config/rw-split.cnf
             - -dU
             - maxscale
             - -l
@@ -28,8 +28,6 @@ spec:
           ports:
             - name: write
               containerPort: 3306
-            - name: read
-              containerPort: 3307
             - name: gui
               containerPort: 8989
           livenessProbe:
@@ -53,4 +51,4 @@ spec:
       volumes:
         - name: config
           secret:
-            secretName: conn-config
+            secretName: config
