Fix auth and added connectivity

--- a/hack/manifests/metallb/maxscale-conn_service.yaml
+++ b/hack/manifests/metallb/maxscale-conn_service.yaml
@@ -5,7 +5,10 @@ metadata:
   labels:
     app.kubernetes.io/instance: maxscale-conn
     app.kubernetes.io/name: maxscale-conn
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: $CIDR_PREFIX.0.200
 spec:
+  type: LoadBalancer
   selector:
     app.kubernetes.io/instance: maxscale-conn
     app.kubernetes.io/name: maxscale-conn
