--- a/maxscale/manifests/auth/client_user.yaml
+++ b/maxscale/manifests/auth/client_user.yaml
@@ -9,5 +9,7 @@ spec:
     name: mariadb
     key: password
   maxUserConnections: 20
-  host: maxscale.default.svc.cluster.local
+  # TODO: restrict host to: maxscale-conn.default.svc.cluster.local. Getting this warning
+  # [Warning] 'user' entry 'client@maxscale-conn.default.svc.cluster.local' ignored in --skip-name-resolve mode.
+  host: "%" 
   retryInterval: 5s
